--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "stylelint-config-sass-guidelines"
+  "extends": "stylelint-config-sass-guidelines",
+  "rules": {
+    "order/properties-alphabetical-order": null,
+    "selector-class-pattern": null
+  }
 }
