adding Player component

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -2,6 +2,8 @@
   "extends": "stylelint-config-sass-guidelines",
   "rules": {
     "order/properties-alphabetical-order": null,
-    "selector-class-pattern": null
+    "selector-class-pattern": null,
+    "max-nesting-depth": null,
+    "selector-no-qualifying-type": null
   }
 }
