styling the home page

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,6 +4,7 @@
     "order/properties-alphabetical-order": null,
     "selector-class-pattern": null,
     "max-nesting-depth": null,
-    "selector-no-qualifying-type": null
+    "selector-no-qualifying-type": null,
+    "selector-max-compound-selectors": null
   }
 }
