--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,6 +5,7 @@
     "selector-class-pattern": null,
     "max-nesting-depth": null,
     "selector-no-qualifying-type": null,
-    "selector-max-compound-selectors": null
+    "selector-max-compound-selectors": null,
+    "scss/selector-no-redundant-nesting-selector": null
   }
 }
